# numeral-converter

./: .gitignore  README.md  gen_doc.yaml  pyproject.toml
data/: uk.csv
docs/: GENERAL_INFO.MD  __init__.MD  constants.MD  text.MD
numeral_converter/: __init__.py  constants.py  lang_data_loader.py  numeral_converter.py  text.py
numeral_converter_doc/: GENERAL_INFO.MD  __init__.MD  constants.MD  lang_data_loader.MD  numeral_converter.MD  text.MD  utils.MD
tests/: test_convert_numerical_in_text.py  test_int2numeral.py  test_int2numeral_word.py  test_load.py  test_number_items2int.py  test_numeral2int.py  test_numeral2number_items.py  test_utils.py
