[tool.poetry]
name = "numeral-converter"
version = "0.0.1"
description = ""
authors = [ "Tetiana Lytvynenko <lytvynenkotv@gmail.com>", "Denis Shchutskyi <denisshchutskyi@gmail.com>"]
readme = "README.md"
packages = [{include = "numeral_converter"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
